Modified to comply with next-themes so that the necessary components (Logo and dark mode button) are rendered properly based on the themes. Also added the necessary css for settings.modules.css so that the projects-section is renedered properly after modular css components were implemented. Also add PeopleBar.tsx to return a different id for the label and input portions so that the star changes colours correctly.

--- a/nextjs/src/app/(dashboard)/settings/settings.module.css
+++ b/nextjs/src/app/(dashboard)/settings/settings.module.css
@@ -1,6 +1,29 @@
+.projects-section {
+    flex: 1 0 25%;
+    background-color: var(--projects-section);
+    border-radius: 32px;
+    padding: 35px 32px 0 32px;
+    overflow: hidden;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .projects-section-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 24px;
+    color: var(--main-color);
+}
+
+.projects-section-header p {
     font-size: 30px;
+    line-height: 32px;
     font-weight: 700;
+    opacity: 0.9;
+    margin: 0;
+    color: var(--main-color);
 }
 
 .settings-box {
